--- a/html/Projects.html
+++ b/html/Projects.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<link rel="shortcut icon" href="https://i.postimg.cc/brCKMnDZ/8f435224c1dd98442668c8992af67300.webp" type="image/x-icon">
 <link rel="stylesheet" href="../styles/style4.css">
 <title>Portfolio</title>
 </head>
@@ -44,6 +45,45 @@
       </div>
     </div>
   </nav>
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Project</h4>
+      <img src="https://i.postimg.cc/s28sQSkR/Screenshot-3.png" alt="B5">
+      <p class="card-text">Bootsrap Example</p>
+      <a href="https://github.com/Hims47/B5.git" class="card-link">Github</a>
+      <a href="https://cosmic-dusk-a44b27.netlify.app/" class="card-link">Netlify</a>
+    </div>
+  </div>
+  <br></br>
+  <br></br>
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Project</h4>
+      <img src="https://i.postimg.cc/rw4w1f9w/Screenshot-20221104-021737.png" alt="E Commerce">
+      <p class="card-text">E Commerce assignment</p>
+      <a href="https://github.com/Hims47/E-Commerce.git" class="card-link">Github</a>
+      <a href="https://joyful-pegasus-ed41c6.netlify.app/" class="card-link">Netlify</a>
+    </div>
+  </div>
+  <br></br>
+  <br></br>
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">Project</h4>
+      <img src="https://i.postimg.cc/L5JCbCvJ/Screenshot-20221104-024550.png" alt="Revision">
+      <p class="card-text">Revision</p>
+      <a href="https://github.com/Hims47/revision.git" class="card-link">Github</a>
+      <a href="https://week2revision1.netlify.app/" class="card-link">Netlify</a>
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
+<footer>
+  <p class="text-muted"><i class="bi bi-geo-alt-fill"></i>10 Wilton Mkwayi street, Mandela Park, Khayelitsha, 7784</p>
+  <p class="text-muted"><i class="bi bi-phone"></i>062 141 1815</p>
+  <p class="text-muted"><i class="bi bi-envelope-fill"></i>Masizoleshabane57@gmail.com</p>
+  <a href="https://www.facebook.com/sive.shabane.7/" class="text-dark" target="_blank"> <i class="fa-brands fa-facebook"></i>facebook</a>
+  <a href="https://github.com/Hims47" class="text-dark"><i class="bi bi-github"></i>Github</a>
+  <p class="text-white text-center">Copyright &copy; 2022 by Sive Shabane</p>
+</footer>
 </html>
