--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<link rel="shortcut icon" href="https://i.postimg.cc/brCKMnDZ/8f435224c1dd98442668c8992af67300.webp" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Portfolio</title>
 </head>
@@ -44,18 +45,13 @@
       </div>
     </div>
   </nav>
-        <section id="info">
-          <h1 class="text-light">Sive Shabane</h1>
-          <p><h4>Web developer at Life Choices Academy</h4></p>
-          <P><h4>Hi, I am a web developer in constant practice to ensure I am able to over deliver. Here at your service.</h4></P>
-          <br></br>
-          <br></br>
-        </section> 
+  <div class="container mt-3">
+    <div class="clamshell mt-4 p-5 bg-danger text-white rounded-pill">
+      <h1>Sive Shabane</h1> 
+      <p><h4>Hi, I am a web developer in constant practice to ensure I am able to over deliver. Here at your service.</h4></p> 
+    </div>
+  </div>
   <script src="https://kit.fontawesome.com/a2d1832c4d.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
-<footer>
-  <p>Author: Hege Refsnes<br>
-    <a href="mailto:hege@example.com">hege@example.com</a></p>
-</footer>
 </html>
