--- a/html/Contact Us.html
+++ b/html/Contact Us.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<link rel="shortcut icon" href="https://i.postimg.cc/brCKMnDZ/8f435224c1dd98442668c8992af67300.webp" type="image/x-icon">
 <link rel="stylesheet" href="../styles/style5.css">
 <title>Portfolio</title>
 </head>
@@ -44,15 +45,25 @@
       </div>
     </div>
   </nav>
-  <div class="mb-3">
-    <label for="exampleFormControlInput1" class="form-label">Email address</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-  </div>
-  <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">Type in message</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    <button type="button" class="btn btn-danger">Submit</button>
-  </div>
+  <form action="https://formspree.io/f/xnqroklz" method="POST">
+    <div class="mb-3">
+      <label for="exampleFormControlInput1" class="form-label">Email address</label>
+      <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Type in message</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      <input type="submit" class="submit"></input>
+    </div>
+  </form>
+  <footer>
+    <p class="text-muted"><i class="bi bi-geo-alt-fill"></i>10 Wilton Mkwayi street, Mandela Park, Khayelitsha, 7784</p>
+    <p class="text-muted"><i class="bi bi-phone"></i>062 141 1815</p>
+    <p class="text-muted"><i class="bi bi-envelope-fill"></i>Masizoleshabane57@gmail.com</p>
+    <a href="https://www.facebook.com/sive.shabane.7/" class="text-dark" target="_blank"> <i class="fa-brands fa-facebook"></i>facebook</a>
+    <a href="https://github.com/Hims47" class="text-dark"><i class="bi bi-github"></i>Github</a>
+    <p class="text-white text-center">Copyright &copy; 2022 by Sive Shabane</p>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
