--- a/html/Testimonials.html
+++ b/html/Testimonials.html
@@ -57,7 +57,7 @@
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
-          <img src="https://i.postimg.cc/jj5xQvZw/IMG-20221103-WA0005.jpg" class="card-img-top" alt="Broly">
+          <img src="https://i.postimg.cc/Lsk1wT4S/DSC-3528.jpg" class="card-img-top" alt="Konke">
           <h5 class="card-title">Konke JeffRicardo Malindi</h5>
           <p class="card-text">Sive is the type to solve any problem put in front of him ,he's kind ,funny and very approachable which makes working with him comfortable for anybody ,doesn't make him lazy though ,Sive is an intelligent individual who knows how to think around something, without him even knowing it himself.</p>
         </div>
@@ -70,7 +70,7 @@
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
-          <img src="https://i.postimg.cc/vHRrMXVG/6d1835ff415b4e70aafa3e454e601472.jpg" class="card-img-top" alt="Broly">
+          <img src="https://i.postimg.cc/RF2LwzmR/265565175-949071472391156-7400219694298354386-n.jpg" class="card-img-top" alt="Broly">
           <h5 class="card-title">Brogan Gys</h5>
           <p class="card-text">Sive is someone who always ensures that the task at hand is always 100% complete  , he is very punctual and respectful towards everyone and is someone who is a great team worker.I am sure he would be a real asset for any company</p>
         </div>
@@ -101,7 +101,7 @@
     <div class="col-sm-6">
       <div class="card">
         <div class="card-body">
-          <img src="https://i.postimg.cc/vHRrMXVG/6d1835ff415b4e70aafa3e454e601472.jpg" class="card-img-top" alt="Broly">
+          <img src="https://i.postimg.cc/L4cgKF7T/154006613-795830057945284-2619563002836390634-n.jpg" class="card-img-top" alt="Broly">
           <h5 class="card-title">Luntu Sogeyana</h5>
           <p class="card-text">Sive is a kind individual  who would  help out anybody  if possible. He always tries to lighten the mood to ensure that nobody overstresses and inevitably makes mistakes in their projects. He isn't afraid to ask for help when he needs it and his determination to complete a task/problem makes him one of the most hard working and consistent individuals I know.</p>
         </div>
@@ -112,4 +112,12 @@
   <br></br>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
+<footer>
+  <p class="text-muted"><i class="bi bi-geo-alt-fill"></i>10 Wilton Mkwayi street, Mandela Park, Khayelitsha, 7784</p>
+  <p class="text-muted"><i class="bi bi-phone"></i>062 141 1815</p>
+  <p class="text-muted"><i class="bi bi-envelope-fill"></i>Masizoleshabane57@gmail.com</p>
+  <a href="https://www.facebook.com/sive.shabane.7/" class="text-dark" target="_blank"> <i class="fa-brands fa-facebook"></i>facebook</a>
+  <a href="https://github.com/Hims47" class="text-dark"><i class="bi bi-github"></i>Github</a>
+  <p class="text-white text-center">Copyright &copy; 2022 by Sive Shabane</p>
+</footer>
 </html>
