--- a/html/about.html
+++ b/html/about.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<link rel="shortcut icon" href="https://i.postimg.cc/brCKMnDZ/8f435224c1dd98442668c8992af67300.webp" type="image/x-icon">
 <link rel="stylesheet" href="../styles/style2.css">
 </head>
 <body>
@@ -44,32 +45,21 @@
       </div>
     </div>
   </nav>
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="https://i.postimg.cc/qMwN8MWJ/wp11334574.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://i.postimg.cc/vZ1XjjrV/vegeta-majin-state-hd-xxoacws80h4uo62o-xxoacws80h4uo62o.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="https://i.postimg.cc/C1PqR8F4/vegeta-ssj4-wallpaper-by-groxkof-debv6xy-fullview.jpg" class="d-block w-100" alt="...">
+  <section class="about section-padding" id="about">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-12 col-12">
+          <div class="about-img"><img alt="" class="img-fluid" src="https://i.postimg.cc/JzpC1yrk/Screenshot-20221103-143935-1.jpg"></div>
+        </div>
+        <div class="col-lg-8 col-md-12 col-12 ps-lg-5 mt-md-5">
+          <div class="about">
+            <h2>Aspiring Web Developer</h2>
+            <p>Born in 2003. Completed high school in 2021 with a Diploma certifcate. Early 2022, I attended an Information Technology bootcamp at iStudent Academy. Enrolled with Life Choices Academy late September 2022 to learn the craft of web development.</p>
+          </div>
+        </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+</section>
   <div class="container mt-3"> 
   <H1><i class="bi bi-gear-fill"></i>Acquired Skills</H1>
   <h2><i class="bi bi-filetype-html"></i>HTML</h2>
@@ -89,12 +79,17 @@
   <div class="progress">
     <div class="progress-bar progress-bar-striped progress-bar-animated bg-dark" style="width:53%"></div>
   </div>
-  <br></br>
-  <br></br>
-  <p><H4>Bootcamp attended at iStudent Academy</H4></p>
 </div>
 <br></br>
 <br></br>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
+<footer>
+  <p class="text-muted"><i class="bi bi-geo-alt-fill"></i>10 Wilton Mkwayi street, Mandela Park, Khayelitsha, 7784</p>
+  <p class="text-muted"><i class="bi bi-phone"></i>062 141 1815</p>
+  <p class="text-muted"><i class="bi bi-envelope-fill"></i>Masizoleshabane57@gmail.com</p>
+  <a href="https://www.facebook.com/sive.shabane.7/" class="text-dark" target="_blank"> <i class="fa-brands fa-facebook"></i>facebook</a>
+  <a href="https://github.com/Hims47" class="text-dark"><i class="bi bi-github"></i>Github</a>
+  <p class="text-white text-center">Copyright &copy; 2022 by Sive Shabane</p>
+</footer>
 </html>
